2005-12-06  Tom Tromey  <tromey@redhat.com>

	* javax/imageio/ImageIO.java (ImageReaderIterator): Genericized.
	Added new constructor.
	(ImageWriterIterator): Likewise.
	(getReadersByFilter): Genericized.
	(getWritersByFilter): Likewise.
	(getImageReadersBySuffix): Likewise.
	(getImageWriters): Likewise.
	(hasNext): Likewise.
	* javax/print/attribute/AttributeSetUtilities.java
	(verifyAttributeCategory): Genericized.
	(verifyAttributeValue): Likewise.
	(verifyCategoryForValue): Likewise.
	* javax/print/attribute/AttributeSet.java (containsKey): Genericized.
	(get): Likewise.
	(remove): Likewise.
	* javax/print/attribute/Attribute.java (getCategory): Genericized.
	* javax/print/attribute/HashAttributeSet.java (HashAttributeSet):
	Genericized.
	(containsKey): Likewise.
	* javax/imageio/spi/ServiceRegistry.java (deregisterAll):
	Genericized.
	* javax/imageio/spi/IIOServiceProvider.java (onDeregistration):
	Genericized.
	(onRegistration): Likewise.
	* javax/imageio/metadata/IIOMetadataFormatImpl.java (getObjectClass):
	Genericized.
	(getObjectMaxValue): Likewise.
	(getObjectMinValue): Likewise.
	* javax/imageio/ImageIO.java (getImageReadersBySuffix): Genericized.
	(getImageWriters): Likewise.

2005-12-05  Casey Marshall <csm@gnu.org>

	* native/jni/classpath/jcl.h (environ): define, or declare
	'extern.'
	* native/jni/java-lang/java_lang_VMProcess.c: include <jcl.h>.
	Remove 'extern' define.
	* native/jni/java-lang/java_lang_VMSystem.c
	(Java_java_lang_VMSystem_environ): don't declare 'environ.'

2005-12-05  Tom Tromey  <tromey@redhat.com>

	* java/lang/instrument/Instrumentation.java (redefineClasses): Javadoc
	fix.
	* java/lang/instrument/ClassFileTransformer.java (transform): Javadoc
	fix.

2005-12-04  Nicolas Geoffray  <nicolas.geoffray@menlina.com>

	* vm/reference/java/lang/VMInstrumentationImpl.java
	(redefineClasses): Added an extra parameter of type
	java.lang.instrument.Instrument.
	* java/lang/InstrumentationImpl.java